--- a/clear.html
+++ b/clear.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-   <div style="border:5px solid black; background-color:lightpink" > <h2> clear (Footer below floated content)</h2>
+   <div style="border:5px solid black; background-color:lightpink; margin:30px ; padding:10px" > <h2> clear (Footer below floated content)</h2>
     <img src="https://images.unsplash.com/photo-1516542076529-1ea3854896f2?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwcm9maWxlLWxpa2VkfDExfHx8ZW58MHx8fHx8" style="float:left; width:150px ; height: 200px; margin:10px;">
     <p> This paragraph wraps around the floated image.</p>
     <p style ="clear:both; background:lightgray;"> This is the footer section, forced below the image using clear:both</p></div>
