--- a/inline-block.html
+++ b/inline-block.html
@@ -3,16 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Display-INLINE block</title>
-    <link rel="stylesheet" href="./styleinline.css">
+    <title>Inline-block</title>
+    <link rel="stylesheet" href="styleinline.css">
 </head>
 <body>
-    <div> <h1>Didplay: Inline-block (Product cards)</h1>
-    <div> Book <br> S10</div>
-    <div> Headphones <br> S25</div>
-    <div> Watch <br> s50 </div>
-    
-     </div>
+    <div class="container">
+        <h2>display: inline-block (Product cards)</h2>
+    <div class="card yellow">
+        <h3> Book </h3>
+        <p> $10</p> 
+    </div>
+
+    <div class="card pink">
+        <h3>Headphones</h3>
+        <p> $30</p>
+    </div>
+
+    <div class="card blue">
+         <h3>Watch</h3>
+         <p>$50</p>
+    </div>
+
+    </div>
 
     
 </body>
