--- a/inline-block.html
+++ b/inline-block.html
@@ -25,6 +25,13 @@
     </div>
 
     </div>
+    <!-- <div class="container">
+        <h1>display</h1> 
+        <div class="box box1"> </div>
+        <div class="box box2"> </div>
+        <div class="box box3"> </div>
+
+    </div> -->
 
     
 </body>
